--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,62 @@
 .bg-gradient-primary-secondary {
   @apply bg-gradient-to-r from-primary via-secondary to-primary;
 }
+@layer utilities {
+  .text-20px {
+    font-size: 20px;
+  }
+  .font-extra-bold {
+    font-weight: 800;
+  }
+}
+.movie-card {
+  position: relative;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 28px; /* Rounded corners */
+  overflow: hidden; /* Ensure content doesn't overflow the rounded corners */
+  color: #333; /* Text color for better contrast */
+  transition: transform 0.2s;
+  display: flex; /* Ensure movie card uses flexbox */
+  flex-direction: column; /* Arrange items vertically */
+  justify-content: space-between; /* Space evenly within the card */
+}
+
+.movie-card::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 1px solid #e31059; /* Border color */
+  border-radius: inherit; /* Match the card's border radius */
+  pointer-events: none; /* Ensure the border doesn't interfere with user interactions */
+}
+
+.movie-card img {
+  border-radius: 28px; /* Match the card's rounded corners */
+  max-width: 100%;
+  height: auto;
+}
+
+.movie-card:hover {
+  transform: scale(1.05);
+}
+
+.add-to-favorites {
+  cursor: pointer;
+  background-color: #e31059;
+  color: white;
+  border: 1px solid #e31059;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  display: inline-block;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.add-to-favorites:hover {
+  background-color: white;
+  color: #e31059;
+}
